# OOP_Sem1_Case3_IU5-23B

./: .gitignore  CMakeLists.txt  README.md  ГИТХАБ КАРТИНКА.htm
include/: Group.h  Student.h  StudentGroup.h
src/: Student.cpp  StudentGroup.cpp  main.cpp  program
